Service now has connection settings

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,8 @@
             type="com.example.accessibility.MainActivity"/>
     </data>
 
-    <android.support.constraint.ConstraintLayout
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context="com.example.accessibility.MainActivity">
@@ -20,5 +21,11 @@
             android:text="Send message"
             android:onClick="@{() -> activity.sendMessage()}"/>
 
-    </android.support.constraint.ConstraintLayout>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Set connection"
+            android:onClick="@{() -> activity.setConnection()}"/>
+
+    </LinearLayout>
 </layout>
