--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -84,7 +84,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="64dp"
                         android:background="?attr/selectableItemBackground"
-                        android:clickable="true">
+                        android:clickable="true"
+                        android:onClick="@{() -> viewModel.changeConnection()}">
 
                         <TextView
                             android:id="@+id/textView1"
@@ -109,7 +110,7 @@
                             android:layout_marginStart="8dp"
                             android:ellipsize="end"
                             android:maxLines="2"
-                            android:text="localhost"
+                            android:text="@{viewModel.connection}"
                             android:textColor="@color/paleText"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintLeft_toLeftOf="parent"
