--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -143,7 +143,6 @@
             <android.support.v7.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/colorAccent"
                 android:visibility="@{BoolToVisibilityConverter.convert(viewModel.hasMessages)}"
                 bind:configuration="@{viewModel.recyclerConfiguration}"/>
 
@@ -153,6 +152,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:clickable="true"
+            android:onClick="@{() -> viewModel.getMessages()}"
             app:layout_anchor="@id/appbar"
             app:layout_anchorGravity="bottom|right|end"/>
 
