Added refresh icon

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -153,6 +153,7 @@
             android:layout_height="wrap_content"
             android:clickable="true"
             android:onClick="@{() -> viewModel.getMessages()}"
+            android:src="@drawable/ic_refresh"
             app:layout_anchor="@id/appbar"
             app:layout_anchorGravity="bottom|right|end"/>
 
