--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -111,7 +111,7 @@
                             android:ellipsize="end"
                             android:maxLines="2"
                             android:text="@{viewModel.connection}"
-                            android:textColor="@color/paleText"
+                            android:textColor="@color/colorLessImportant"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintLeft_toLeftOf="parent"
                             app:layout_constraintRight_toRightOf="parent"
