--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -8,25 +8,52 @@
     </data>
 
     <LinearLayout
+        style="@style/RecyclerItemStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <!--<TextView
+        <LinearLayout
+            style="@style/MessageInternalItemStyle"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@{viewModel.createdAt}"/>-->
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@{viewModel.request}"/>
+            <TextView
+                style="@style/TextSubtextStyle"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.20"
+                android:gravity="center"
+                />
+            <!--android:text="@{viewModel.createdAtString}"-->
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@{viewModel.reply}"/>
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.80"
+                android:orientation="vertical">
 
+                <TextView
+                    style="@style/TextHeaderStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:maxLines="2"
+                    android:text="@{viewModel.request}"/>
+
+                <TextView
+                    style="@style/TextSubtextStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@{viewModel.reply}"/>
+
+            </LinearLayout>
+        </LinearLayout>
+
+        <View
+            style="@style/CardSeparatorStyle"
+            android:layout_width="match_parent"/>
     </LinearLayout>
 
 </layout>
