--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,32 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="RecyclerItemStyle">
+        <item name="android:clickable">true</item>
+        <item name="android:focusable">true</item>
+        <item name="android:minHeight">@dimen/layout_height_tall</item>
+        <item name="android:background">?android:attr/selectableItemBackground</item>
+    </style>
+
+    <style name="MessageInternalItemStyle">
+        <item name="android:padding">@dimen/general_tiny</item>
+    </style>
+
+    <style name="TextHeaderStyle">
+        <item name="android:textSize">@dimen/text_medium</item>
+        <item name="android:textColor">@color/text_primary</item>
+    </style>
+
+    <style name="TextSubtextStyle">
+        <item name="android:textSize">@dimen/text_small</item>
+        <item name="android:textColor">@color/text_secondary</item>
+    </style>
+
+    <style name="CardSeparatorStyle">
+        <item name="android:layout_height">@dimen/layout_height_line</item>
+        <item name="android:layout_marginLeft">@dimen/layout_margin_horizontal_small</item>
+        <item name="android:layout_marginRight">@dimen/layout_margin_horizontal_small</item>
+        <item name="android:background">@color/image_disabled_item</item>
+    </style>
+
 </resources>
